--- a/_default/Dockerfile
+++ b/_default/Dockerfile
@@ -8,4 +8,7 @@ EXPOSE 8080
 
 WORKDIR /app
 COPY app.py .
-CMD streamlit run app.py --server.port=${PORT} --browser.serverAddress="0.0.0.0"
+CMD streamlit run app.py \
+    --browser.serverAddress="0.0.0.0" \
+    --server.port=${PORT} \
+    --server.baseUrlPath="/streamlit-run-default"
